<resources>
    <string name="app_name">SCAE-Android</string>

    //General
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">Ingresar</string>
    <string name="register">Registrar</string>
    <string name="menu">MENÚ</string>
    <string name="confirm">Confirmar</string>
    <string name="app_teacher_name">SCAE Teacher</string>
    <string name="app_student_name">SCAE Student</string>

    //Login
    <string name="forget_pass1">Te olvidaste la clave?</string>
    <string name="forget_pass2">Recupérala aquí!</string>
    
    //Menu
    <string name="perfil">Perfil</string>
    <string name="register_assistance">Marcar Asistencias</string>
    <string name="syncronizate">Sincronizar</string>
    <string name="enable_disable_delegate">Habilitar/Deshabilitar delegado</string>
    <string name="report_assistance">Reporte de Asistencias</string>
    <string name="about_course">Acerca del Curso</string>
    <string name="close_session">Cerrar Sesión</string>
    <string name="teacher_example">Jean Carlos, Ramos Cruz</string>
    <string name="student_example">Dinjo Josafat, Vara Huayta</string>

    //Courses
    <string name="select_course">Seleccione el curso al que accederá</string>
    <string name="no_courses">No tiene cursos a su cargo</string>
    <string name="course_example">Tesis 1</string>
    <string name="course_schedule">Miércoles-Viernes</string>
    

</resources>
