<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/frame_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/img_logo_scae"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/ic_launcher"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/white_color"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="18dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_user"
                style="@style/edit_text"
                android:hint="@string/user"
                android:inputType="text"/>

            <EditText
                android:id="@+id/et_password"
                style="@style/edit_text"
                android:hint="@string/password"
                android:inputType="textPassword"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_login"
                style="@style/btn_default"
                android:text="@string/login"/>

            <Button
                android:id="@+id/btn_register"
                style="@style/btn_default"
                android:text="@string/login"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_gravity="center">

            <TextView
                style="@style/textview_default"
                android:gravity="center"
                android:text="@string/forget_pass1"/>

            <TextView
                android:id="@+id/forget_password"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                style="@style/textview_default"
                android:text="@string/forget_pass2"
                android:textStyle="bold"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>